--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "license": "0BSD",
   "dependencies": {
     "gatsby": "^5.2.0",
+    "gatsby-plugin-image": "^3.2.0",
+    "gatsby-source-sanity": "^7.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
