Add fix to make it linkable

--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "gatsby-source-sanity": "^7.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "resolutions": {
+    "axios": "^0.27.2"
   }
 }
